--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -21,8 +21,25 @@ h3{
 
 .header{
     background: linear-gradient(90deg, #7bcccd, #7fa8d1, #C9A1DD);
-    height: 100px;
+    height: 60px;
     margin-bottom: 12px;
+    color: white;
+}
+.header h1{
+    margin: 0;
+}
+
+.header > div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 8px;
+}
+.header button{
+    background-color: transparent;
+    cursor: pointer;
+    padding: 5px 5px;
 }
 
 span{
@@ -35,6 +52,7 @@ span{
     padding-bottom: 12px;
     padding: 10px;
 }
+
 
 /* --------------------------------------General */
 .general_info{
@@ -49,6 +67,27 @@ span{
     justify-content: baseline;
     align-items: left;
 }
+
+.flex-row{
+    padding: 0 12px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.flex-row > div{
+    display: flex;
+    flex-direction: column;
+
+}
+
+.flex-row > div:nth-child(1){
+    align-items:flex-start;
+}
+
+.flex-row > div:nth-child(2){
+    align-items:flex-end;
+}
+
 /* -------------------------------Профиль */
 .profile{
     border-bottom: 1px solid #D9D9D9;
@@ -75,6 +114,18 @@ span{
     align-items: left;
 }
 
+.visit > div{
+    border-bottom: 1px solid #D9D9D9;
+    padding-top: 12px;
+    padding-bottom: 12px;
+
+}
+.use-data{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
 /* ----------------------------------- Daigrams*/
 
 .diagrams{
@@ -89,12 +140,84 @@ span{
     display: flex;
     flex-direction: column;
     align-items: stretch;
+}
+
+.db-click{
+    border: 1px solid #D9D9D9;
+    border-radius: 20px;
+    padding: 16px 12px;
+}
+
+
+
+/* ---------------------------------Analisys */
+.flex-params{
+    padding-left: 12px;
+    padding-right: 12px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
 
 }
+
+.analysis{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-items: stretch;
+}
+
+.analysis > form > div > div{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 12px;
+    border-bottom: 1px solid #D9D9D9;
+    padding: 6px 12px;
+}
+
+.analysis > form > div > div > div{
+    border: 1px solid #D9D9D9;
+    border-radius: 15px;
+    padding-left: 6px;
+    padding-top: 4px;
+}
+
+.analysis textarea{
+    width: 90%;
+    border: none;
+}
+
+.analysis h4{
+    margin: 0;
+    font-size: 12px;
+}
+
+
+
 
 /* ----------------------------------- */
 @media(max-width: 500px){
     span{
         font-size: 15px;
     }
+    .header{
+        height: 40px;
+        padding: 0;
+    }
+    .header > div{
+        padding: 0 10px;
+    }
+
+    .header h1{
+        font-size: 16px;
+    }
+    .database{
+        margin: 12px 8px;
+    }
+    .analysis textarea{
+        overflow: hidden;
+    }
+    
+
 }
