--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -2,6 +2,10 @@
     color: #203062;
 }
 
+html, body{
+    background-color: white;
+}
+
 html, body {
     padding: 0;
     margin: 0;
@@ -140,12 +144,14 @@ span{
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    gap: 12px;
 }
 
 .db-click{
     border: 1px solid #D9D9D9;
     border-radius: 20px;
     padding: 16px 12px;
+    
 }
 
 
@@ -218,6 +224,10 @@ span{
     .analysis textarea{
         overflow: hidden;
     }
+    .diagrams{
+        /* flex-direction: column; */
+    }
+    /* ..diagrams canvas{} */
     
 
 }
